# optimization-dashboard

./: .pre-commit-config.yaml  Dockerfile  README.md  callbacks.py  factory.py  gd_implementations.py  layout.py  main.py  optimization_functions.py  optimization_state.py  pyproject.toml  requirements.txt  test.py  type_hints.py  utils.py  visualization.py
.github/workflows/: build.yml  pre-commit.yml
src/gradient_descent/: main.py
src/gradient_descent/optimization/: gd_implementations.py  optimization_functions.py  optimization_state.py
src/gradient_descent/ui/: callbacks.py  layout.py  visualization.py
src/gradient_descent/utils/: factory.py  type_hints.py  utils.py
tests/: conftest.py
tests/test_e2e/: test_function_selection_workflow.py
tests/test_integration/: test_update_callbacks.py
tests/test_optimization/: test_gradient_descent.py  test_optimization_functions.py  test_optimization_state.py
tests/test_ui/: test_create_view.py  test_layout_structure.py
